adjusted version and version-compat for 0.0.4
git-svn-id: http://svn.code.sf.net/p/holdingnuts/code/trunk@621 00c8e4f2-bc05-11dd-9892-7df5a783e2f7

--- a/docs/holdingnuts-server.6
+++ b/docs/holdingnuts-server.6
@@ -1,6 +1,6 @@
 .\" Man page for the HoldingNuts project
 .\"   groff -man -Tascii holdingnuts-server.6
-.TH HOLDINGNUTS 6 "Version 0.0.4" "Dominik Geyer" "HoldingNuts manual"
+.TH HOLDINGNUTS-SERVER 6 "Version 0.0.4" "Dominik Geyer" "HoldingNuts manual"
 .SH NAME
 HoldingNuts \- a poker client and server
 .SH SYNOPSIS
